--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./este.js"></script>
-    <title>Pruebas de Ts</title>
+    <script src="./dist/este.js"></script>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Prueba de Ts</h1>
+    <h1>Hola</h1>
 </body>
 </html>
